# s9s-tools

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.ubuntu22.04  Makefile.am  README.md  TODO  autogen.sh  build-in-docker-ubuntu22.sh  configure.ac  coverage.sh  create_backup.js  doxygen.conf  install-s9s-tools-testing.sh  install-s9s-tools.sh  notes.txt  pip-download  project.spec  release-to-obs.sh  schedule_backup.js  schedule_job.js  schedulejobinstance.js  version-bump.sh
doc/: ENDPOINT_INVESTIGATION_SUMMARY.md  ENDPOINT_VIOLATIONS_TABLE.md  Makefile.am  auth.txt  endpoint-correspondence-data.csv  endpoint-correspondence-investigation.md  lxc.text  s9s-account.1  s9s-alarm.1  s9s-backup-clickhouse.1  s9s-backup.1  s9s-cil.3  s9s-cloud-credentials.1  s9s-cluster.1  s9s-container.1  s9s-controller.1  s9s-dbschema.1  s9s-event.1  s9s-group.1  s9s-job.1  s9s-log.1  s9s-maintenance.1  s9s-metatype.1  s9s-node.1  s9s-pool-controllers.1  s9s-poolcontrollers.1  s9s-process.1  s9s-replication.1  s9s-report.1  s9s-script.1  s9s-server.1  s9s-tree.1  s9s-user.1  s9s-watchlists.1  s9s.1  s9s.conf.5  s9s.dbversions.1  s9s_cluster.1  s9s_completion
libs9s/: Makefile.am  S9sAccount  S9sAlarm  S9sAtomicInt  S9sBackup  S9sBrowser  S9sBusinessLogic  S9sButton  S9sCalc  S9sCluster  S9sCmonGraph  S9sCommander  S9sConfigFile  S9sContainer  S9sController  S9sDateTime  S9sDialog  S9sDir  S9sDisplay  S9sDisplayEntry  S9sDisplayList  S9sEditor  S9sEntryDialog  S9sEvent  S9sFile  S9sFormat  S9sFormatter  S9sGlobal  S9sGraph  S9sGroup  S9sInfoPanel  S9sJob  S9sJsonParseContext  S9sMap  S9sMessage  S9sMonitor  S9sMutex  S9sMutexLocker  S9sNode  S9sObject  (+184 more)
s9s/: Makefile.am  main.cpp
tests/: Makefile.am  cdt-upload-scripts.sh  common.am  create_galera_cluster.sh  ft_access.sh  ft_acl.sh  ft_adminuser.sh  ft_autoregister_aws.sh  ft_backup.sh  ft_backup_1.sh  ft_backup_ndb.sh  ft_cat.sh  ft_cdt.sh  ft_cluster_aws.sh  ft_cluster_az.sh  ft_cluster_error.sh  ft_cluster_gce.sh  ft_cluster_lxc.sh  ft_cluster_lxc_key.sh  ft_cluster_lxc_multi.sh  ft_clustersave.sh  ft_clustersavelocal.sh  ft_clustersavelocalpostgres.sh  ft_clustersavelxc.sh  ft_clustersavepostgres.sh  ft_cmon_cloud.sh  ft_containers.sh  ft_containers_aws.sh  ft_containers_az.sh  ft_containers_cmon_cloud.sh  ft_containers_gce.sh  ft_containers_lxc.sh  ft_controllersave.sh  ft_controllersavelocal.sh  ft_controllersavelocalmulti.sh  ft_controllersavemulti.sh  ft_create_databases.sh  ft_elasticsearch.sh  ft_errors.sh  ft_folders.sh  (+148 more)
tests/common/: s9sunittest.cpp  s9sunittest.h
tests/disabled_tests/: ft_cluster_aws.sh  ft_containers_az.sh  ft_galera_gce.sh  ft_replication_aws.sh
tests/pys9s/: ft_elasticsearch.py  ft_elasticsearch_ha.py  ft_mssqlsingle.py  ft_user.py
tests/pys9s/common/: configurer.py  lxd_manager.py  s9s_cli.py  sys_comm.py  test.py
tests/request-examples/: AccessDenied-addToGroup-rep.json  AccessDenied-addToGroup-req.json  AccessDenied-authenticateWithPassword-rep.json  AccessDenied-authenticateWithPassword-req.json  AccessDenied-deleteGroup-rep.json  AccessDenied-deleteGroup-req.json  AccessDenied-unregisterServers-rep.json  AccessDenied-unregisterServers-req.json  InvalidRequest-addToGroup-rep.json  InvalidRequest-addToGroup-req.json  InvalidRequest-cat-rep.json  InvalidRequest-cat-req.json  InvalidRequest-checkAccess-rep.json  InvalidRequest-checkAccess-req.json  InvalidRequest-createAccount-rep.json  InvalidRequest-createAccount-req.json  InvalidRequest-createDatabase-rep.json  InvalidRequest-createDatabase-req.json  InvalidRequest-deleteGroup-rep.json  InvalidRequest-deleteGroup-req.json  InvalidRequest-getAccounts-rep.json  InvalidRequest-getAccounts-req.json  InvalidRequest-getClusterInfo-rep.json  InvalidRequest-getClusterInfo-req.json  InvalidRequest-getConfig-rep.json  InvalidRequest-getConfig-req.json  InvalidRequest-noOperation-rep.json  InvalidRequest-noOperation-req.json  InvalidRequest-ping-rep.json  InvalidRequest-ping-req.json  InvalidRequest-setConfig-rep.json  InvalidRequest-setConfig-req.json  InvalidRequest-setcontent-rep.json  InvalidRequest-setcontent-req.json  ObjectNotFound-createJobInstance-rep.json  ObjectNotFound-createJobInstance-req.json  ObjectNotFound-createUser-rep.json  ObjectNotFound-createUser-req.json  ObjectNotFound-deleteBackupRecord-rep.json  ObjectNotFound-deleteBackupRecord-req.json  (+142 more)
tests/s9s_configs/: test_config_02.conf  test_config_03.conf  test_config_04.conf
tests/scripts/: cpulist.js  nodelist.js  test001.js  test002.js  test003.js  test004.js  test005.js  test_backtrace.js  test_output_lines.js  test_return_0.js  testgraph.js
tests/scripts/cluster_scripts/: clusterinfo.js  deleteoldjobs.js  hostsinfo.js  jobinfo.js  shell.js
tests/scripts/test-scripts-cluster/: imperative_cluster_001.js  imperative_cluster_002.js  (+5 more)
tests/ut_library/: Makefile.am  ut_library.cpp  ut_library.h
tests/ut_s9saccount/: Makefile.am  ut_s9saccount.cpp  ut_s9saccount.h
tests/ut_s9sbackup/: Makefile.am  ut_s9sbackup.cpp  ut_s9sbackup.h
tests/ut_s9scluster/: Makefile.am  ut_s9scluster.cpp  ut_s9scluster.h
tests/ut_s9sconfigfile/: Makefile.am  ut_s9sconfigfile.cpp  ut_s9sconfigfile.h
tests/ut_s9sdatetime/: Makefile.am  ut_s9sdatetime.cpp  ut_s9sdatetime.h
tests/ut_s9sfile/: Makefile.am  ut_s9sfile.cpp  ut_s9sfile.h
tests/ut_s9sgraph/: Makefile.am  ut_s9sgraph.cpp  ut_s9sgraph.h
tests/ut_s9snode/: Makefile.am  ut_s9snode.cpp  ut_s9snode.h
tests/ut_s9soptions/: Makefile.am  ut_s9soptions.cpp  ut_s9soptions.h
tests/ut_s9sregexp/: Makefile.am  ut_s9sregexp.cpp  ut_s9sregexp.h
tests/ut_s9srpcclient/: Makefile.am  ut_s9srpcclient.cpp  ut_s9srpcclient.h
tests/ut_s9sserver/: Makefile.am  ut_s9sserver.cpp  ut_s9sserver.h
tests/ut_s9sstring/: Makefile.am  ut_s9sstring.cpp  ut_s9sstring.h
tests/ut_s9surl/: Makefile.am  ut_s9surl.cpp  ut_s9surl.h
tests/ut_s9suser/: Makefile.am  ut_s9suser.cpp  ut_s9suser.h
tests/ut_s9svariant/: Makefile.am  ut_s9svariant.cpp  ut_s9svariant.h
tests/ut_s9svariantmap/: Makefile.am  ut_s9svariantmap.cpp  ut_s9svariantmap.h
(+76 files in other folders)
