man_MANS =            \
	s9s.1             \
	s9s-job.1         \
	s9s-cluster.1     \
	s9s-node.1        \
	s9s-process.1     \
	s9s-backup.1      \
	s9s-user.1        \
	s9s-maintenance.1 \
	s9s-script.1      \
	s9s.conf.5

completion_DATA =     \
	s9s_completion

completiondir = /etc/bash_completion.d

EXTRA_DIST =          \
	$(man_MANS)       \
	$(completion_DATA)

