man_MANS =            \
	s9s.1             \
	s9s-alarm.1       \
	s9s-job.1         \
	s9s-log.1         \
	s9s-cluster.1     \
	s9s-node.1        \
	s9s-server.1      \
	s9s-container.1   \
	s9s-process.1     \
	s9s-backup.1      \
	s9s-user.1        \
	s9s-group.1       \
	s9s-account.1     \
	s9s-maintenance.1 \
	s9s-metatype.1    \
	s9s-event.1       \
	s9s-script.1      \
	s9s-replication.1 \
	s9s-report.1      \
	s9s-tree.1        \
	s9s-controller.1  \
	s9s.conf.5        \
	s9s-cil.3

completion_DATA =     \
	s9s_completion

completiondir = /etc/bash_completion.d

EXTRA_DIST =          \
	$(man_MANS)       \
	$(completion_DATA)

