#
# Copyright (C) 2016 severalnines.com
#

SUBDIRS =     	     \
	ut_library       \
	ut_s9sstring     \
	ut_s9sdatetime   \
	ut_s9surl        \
	ut_s9snode       \
	ut_s9sserver     \
	ut_s9scluster    \
	ut_s9sbackup     \
	ut_s9saccount    \
	ut_s9svariant    \
	ut_s9svariantmap \
	ut_s9suser       \
	ut_s9sregexp     \
	ut_s9soptions    \
	ut_s9sgraph      \
	ut_s9srpcclient  \
	ut_s9sfile       \
	ut_s9sconfigfile 


